<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_20"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroybold"
                android:text="@string/your_location"
                android:textColor="@color/grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroybold"
                android:text="Dubai"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_30" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:fontFamily="@font/gilroymedium"
                android:text="@string/most_popular"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/popularRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:fontFamily="@font/gilroymedium"
                android:text="@string/categories"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/categoriesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20" />

            <TextView
                android:id="@+id/featureCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:fontFamily="@font/gilroymedium"
                android:text="@string/featured_in_dubai"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/featuredRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20" />


        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</LinearLayout>