<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:layout_margin="@dimen/dp_14"
                android:gravity="center">

                <ImageView
                    android:id="@+id/headIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_color_ballon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_toEndOf="@+id/headIcon"
                    android:fontFamily="@font/gilroymedium"
                    android:text="@string/destination"
                    android:textAllCaps="false"
                    android:textColor="@color/background"
                    android:textSize="@dimen/sp_24" />

            </RelativeLayout>


            <ImageView
                android:id="@+id/ivLoginPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_30"
                android:src="@drawable/ic_icon_svg" />

            <LinearLayout
                android:id="@+id/facebookLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_50"
                android:layout_marginEnd="@dimen/dp_50"
                android:background="@drawable/background_text_view_facebook"
                android:orientation="horizontal"
                android:padding="@dimen/dp_14">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_facebook" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroybold"
                    android:gravity="center"
                    android:text="@string/continue_with_facebook"
                    android:textColor="@color/white" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/googleLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_50"
                android:background="@drawable/background_text_view_google"
                android:orientation="horizontal"
                android:padding="@dimen/dp_14">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_google_logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroybold"
                    android:gravity="center"
                    android:text="@string/continue_with_google"
                    android:textColor="@color/white" />


            </LinearLayout>

            <TextView
                android:id="@+id/ivBrowseGuest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_6"
                android:fontFamily="@font/gilroybold"
                android:gravity="center"
                android:padding="@dimen/dp_10"
                android:text="@string/no_account"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp_12" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</LinearLayout>